# tsql

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT_PLAN.md  README.md  TODO.md  cliff.toml  config.example.toml
.github/workflows/: ci.yml  release.yml
.hookman/hooks/: pre-commit.toml  pre-push.toml
crates/tsql/: Cargo.toml
crates/tsql/src/: clipboard.rs  history.rs  lib.rs  main.rs  session.rs  util.rs
crates/tsql/src/ai/: mod.rs
crates/tsql/src/app/: app.rs  execution.rs  mod.rs  notebook.rs  notebook_export.rs  notebook_run.rs  pg_snapshot.rs  query_safety.rs  refinement.rs  result_transform.rs  sql_lexer.rs  state.rs
crates/tsql/src/config/: connections.rs  keymap.rs  mod.rs  schema.rs
crates/tsql/src/ui/: action_palette.rs  ai_query_modal.rs  completion.rs  confirm_prompt.rs  connection_form.rs  connection_manager.rs  editor.rs  fuzzy_picker.rs  grid.rs  help_popup.rs  highlighted_editor.rs  json_editor.rs  key_hint_popup.rs  key_sequence.rs  mod.rs  mouse_util.rs  password_prompt.rs  row_detail.rs  sidebar.rs  status_line.rs  style.rs  theme.rs  write_preview.rs
crates/tsql/src/update/: provider.rs  state.rs
crates/tsql/src/vim/: command.rs  handler.rs  mod.rs  mode.rs
crates/tsql/tests/: integration_tests.rs  startup_nonblocking.rs
crates/tsql/tests/common/: mod.rs
crates/tsql/tests/fixtures/: large_html.html
crates/tui-syntax/: Cargo.toml
crates/tui-syntax/src/: highlighter.rs  lib.rs  theme.rs
crates/tui-syntax/src/languages/: html.rs  javascript.rs  json.rs  mod.rs  sql.rs
crates/tui-syntax/src/themes/: mod.rs
docs/: HOMEBREW.md  NOTEBOOK_MODE_FOLLOW_UP_PLAN.md  NOTEBOOK_MODE_PLAN.md  RELEASING.md  UI_REDESIGN_PLAN.md  ratatui-tree-research.md
plans/: feat-ctrl-hjkl-panel-navigation.md  feat-docker-test-isolation.md  feat-toggleable-sidebar-panel.md
scripts/: check-clippy.sh  check-format.sh
src/: main.rs  util.rs
src/app/: app.rs  state.rs
src/ui/: completion.rs  mod.rs
tests/: integration_tests.rs
tests/common/: mod.rs
