[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/fcoury/tsql"
rust-version = "1.80"

[workspace.dependencies]
# Shared dependencies
anyhow = "1"
arboard = "3"
crossterm = "0.28"
ratatui = "0.29"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
tokio-postgres = "0.7"
tui-textarea = { version = "0.7", features = ["search"] }
unicode-width = "0.2"

# Tree-sitter for syntax highlighting
tree-sitter = "0.24"
tree-sitter-highlight = "0.24"
tree-sitter-sequel = "0.3"
tree-sitter-json = "0.24"
tree-sitter-html = "0.23"

# Theme/config parsing
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Platform directories
dirs = "5"

# Fuzzy matching
nucleo-matcher = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"

# Secure password storage
keyring = "3"

# URL parsing
url = "2"

# Tree widget for sidebar
tui-tree-widget = "0.23"

# Dev dependencies
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
